# snake-ga

./: .gitignore  DQN.py  README.md  bayesOpt.py  justfile  pyproject.toml  requirements.txt  snakeClass.py
boards/: example.txt
config/: config.example.json  config.multi_agent.example.json
snake_ga/: __init__.py  cli.py  compare_run.py  config_loader.py  policy_registry.py  wiring.py
snake_ga/adapters/: __init__.py  baseline_policies.py  bayesian_optimizer.py  plotting.py  pygame_session.py  torch_dqn.py
snake_ga/application/: __init__.py  multi_run_loop.py  ports.py  run_loop.py
snake_ga/domain/: __init__.py  game_engine.py  models.py  multi_snake_engine.py  state_encoding.py  tile_grid.py
tests/: __init__.py  conftest.py  test_baseline_policies.py  test_config_loader.py  test_game_engine.py  test_multi_snake_engine.py  test_state_encoding.py  test_tile_grid.py
