[project]
name = "snake-ga"
version = "0.1.0"
description = "Deep Q-learning Snake with hexagonal architecture"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21.0",
    "pygame>=2.0.0",
    "matplotlib>=3.4.0",
    "torch>=1.9.0",
    "seaborn>=0.11.0",
    "GPyOpt>=1.2.6",
    "scipy>=1.7.0",
    "GPy>=1.9.9",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[project.scripts]
snake-ga = "snake_ga.cli:main"

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py310"
